--- a/brewfile
+++ b/brewfile
@@ -1,27 +1,24 @@
 tap "aws/tap"
 tap "homebrew/bundle"
-tap "homebrew/core"
-tap "versent/homebrew-taps"
+# tap "versent/homebrew-taps"
 cask "docker"
 cask "iterm2"
-# cask "atom"
 cask "amazon-chime"
-cask "zoomus"
-cask "viscosity"
-cask "whatsapp"
+cask "zoom"
+# cask "viscosity"
+# cask "whatsapp"
 cask "firefox"
 cask "google-chrome"
 cask "slack"
-cask "amazon-workspaces"
+# cask "amazon-workspaces"
 # cask "1password"
 cask "spotify"
 cask "vagrant"
 cask "virtualbox"
 cask "visual-studio-code"
 brew "aws-shell"
-brew "aws-sam-cli"
 brew "awscli"
-brew "cask"
+# brew "cask"
 brew "git"
 brew "htop"
 brew "jq"
@@ -29,7 +26,6 @@ brew "watch"
 brew "nmap"
 brew "node"
 brew "packer"
-# brew "telnet"
 brew "tfenv"
 brew "tree"
 brew "fzf"
@@ -37,7 +33,7 @@ brew "wget"
 brew "saml2aws"
 brew "vault"
 brew "terraform-docs"
-cask "powershell"
-cask "grammarly"
-brew "kubectx"
-cask "signal"
+# cask "powershell"
+# cask "grammarly"
+# brew "kubectx"
+# cask "signal"
